--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <header >
+        <h1>McKay</h1>
+        <nav class="main-nav">
+            <ul>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact-me">Contact Me</a></li>
+                <li><a href="">Resume</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="cover-photo">
+        <h2>Developer Portfolio</h2>
+    </div>
+    <section class="main-content">
+       
+        <div class="container about-me">
+             <h2 id="about-me">About Me</h2>
+             <p class="info-content">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
+                 I wish to develope my skills for the chance of emplyment within and agency and to 
+                 potentially tackle some freelance work in the meantime. 
+                 My goal is to travel the world and work from my laptop.
+             </p>
+        </div>
+        <div class="container work">
+            <h2>Work</h2>
+            <div class="info-content">
+                <div class="work-links">
+
+                </div>
+                <div class="work-links">
+
+                </div>
+                <div class="work-links">
+
+                </div>
+                <div class="work-links">
+
+                </div>
+                <div class="work-links">
+
+                </div>
+            </div>
+        </div>
+        <footer class="container contact-me">
+            <h2>Contact Me</h2>
+            <p>0436857403</p>
+            <p>alexjosephmckay@gmail.com</p>
+            <p>GitHub</p>
+            <p>Linkdin</p>
+        </footer>
+    </section> 
 </body>
 </html>
