--- a/index.html
+++ b/index.html
@@ -23,19 +23,24 @@
         <h2>Developer Portfolio</h2>
     </div>
     <section class="main-content">
-       
-        <div class="container about-me">
-             <h2 id="about-me">About Me</h2>
-             <p class="info-content">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
-                 I wish to develope my skills for the chance of emplyment within and agency and to 
+       <div class="row">
+             <div class="title">
+                 <h2 id="about-me" >About Me</h2>
+            </div>
+            <div class="content">
+                <p  class="about-me">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
+                 I wish to develope my skills for the chance of employment within and agency and to 
                  potentially tackle some freelance work in the meantime. 
                  My goal is to travel the world and work from my laptop.
-             </p>
+                </p>
+            </div>
         </div>
-        <div class="container work">
-            <h2>Work</h2>
-            <div class="info-content">
-                <div class="work-links">
+        <div class="row">
+            <div class="title">
+                <h2 id="work" >Work</h2>
+            </div>
+            <div class="content work-content">
+                <div class="work-links main-job">
 
                 </div>
                 <div class="work-links">
@@ -52,12 +57,16 @@
                 </div>
             </div>
         </div>
-        <footer class="container contact-me">
-            <h2>Contact Me</h2>
-            <p>0436857403</p>
-            <p>alexjosephmckay@gmail.com</p>
-            <p>GitHub</p>
-            <p>Linkdin</p>
+        <footer id="contact-me" class="row">
+            <div class="title">
+                <h2 >Contact Me</h2>
+            </div>
+            <div class="content footer-content">   
+                <p>0436857403</p>
+                <p>alexjosephmckay@gmail.com</p>
+                <p>GitHub</p>
+                <p>Linkdin</p>
+            </div>
         </footer>
     </section> 
 </body>
