--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact-me">Contact Me</a></li>
-                <li><a href="">Resume</a></li>
+                <li><a href="/Users/chaz/Career/Resume-Alex-Mckay.docx" download>Resume</a></li>
             </ul>
         </nav>
     </header>
@@ -23,9 +23,9 @@
         <h2>Developer Portfolio</h2>
     </div>
     <section class="main-content">
-       <div class="row">
+       <div id="about-me" class="row">
              <div class="title">
-                 <h2 id="about-me" >About Me</h2>
+                 <h2>About Me</h2>
             </div>
             <div class="content">
                 <p  class="about-me">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
@@ -35,26 +35,31 @@
                 </p>
             </div>
         </div>
-        <div class="row">
+        <div id="work" class="row">
             <div class="title">
-                <h2 id="work" >Work</h2>
+                <h2>Work</h2>
             </div>
-            <div class="content work-content">
-                <div class="work-links main-job">
-
-                </div>
-                <div class="work-links">
-
-                </div>
-                <div class="work-links">
-
-                </div>
-                <div class="work-links">
-
-                </div>
-                <div class="work-links">
-
-                </div>
+            <div class="work-content">
+                <a href="https://mckayjalex.github.io/week1-homework/" target="_blank" class="work-links job-1">
+                    <h2>Horiseon</h2>
+                    <p>html / css</p>
+                </a>
+                <a href="" class="work-links job-2">
+                    <h2>Code Two</h2>
+                    <p>html / css</p>
+                </a>
+                <a href="" class="work-links job-3">
+                    <h2>Code Three</h2>
+                    <p>html / css</p>
+                </a>
+                <a href="" class="work-links job-4">
+                    <h2>Code Four</h2>
+                    <p>html / css</p>
+                </a>
+                <a href="" class="work-links job-5">
+                    <h2>Code Five</h2>
+                    <p>html / css</p>
+                </a>
             </div>
         </div>
         <footer id="contact-me" class="row">
@@ -62,10 +67,10 @@
                 <h2 >Contact Me</h2>
             </div>
             <div class="content footer-content">   
-                <p>0436857403</p>
-                <p>alexjosephmckay@gmail.com</p>
-                <p>GitHub</p>
-                <p>Linkdin</p>
+                <p><a href="">0436857403</a></p>
+                <p><a href="">alexjosephmckay@gmail.com</a></p>
+                <p><a href="https://github.com/mckayjalex" target="_blank">GitHub</a></p>
+                <p><a href="https://www.linkedin.com/in/alex-mckay-148569222/" target="_blank">Linkdin</a></p>
             </div>
         </footer>
     </section> 
