fixing final spelling error

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                  <h2>About Me</h2>
             </div>
             <div class="content">
-                <p  class="about-me">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
-                 I wish to develope my skills for the chance of employment within and agency and to 
+                <p class="about-me">I am a 26 year old male who is curently learning Web Development at Adelaide Uni.
+                 I wish to develope my skills for the chance of employment within an agency and to 
                  potentially tackle some freelance work in the meantime. 
                  My goal is to travel the world and work from my laptop.
                 </p>
