--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="bg-[url('./assets/images/code-background.jpg')] h-40 lg:h-80 bg-cover flex justify-end items-end p-4">
         <h2 class="bg-offgrey p-2 lg:p-4 rounded-xl text-md lg:text-2xl">Developer Portfolio</h2>
     </section>
-    <section class="flex flex-col lg:flex-row mx-6 text-center lg:mx-24 pt-6 mb-12">
+    <section class="flex flex-col mx-6 text-center lg:mx-24 pt-6 mb-12">
         <div id="about-me" class="flex flex-col lg:flex-row h-40 items-center">
             <h2 class="lg:w-1/4 text-center text-2xl pb-6 underline">About Me</h2>
             <p class="lg:w-3/4">Hi my names Alex, I'm a 26 year old who is curently learning Web Development at the
@@ -66,18 +66,18 @@
                 My goal is to travel the world and work from my laptop.
             </p>
         </div>
-        <div id="work" class="flex flex-col lg:flex-row items-center pt-20">
+        <div id="work" class="flex flex-col lg:flex-row items-center pt-20 lg:pt-0">
             <h2 class="lg:w-1/4 text-center text-2xl underline pr-2">Work</h2>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 text-white content-center pt-6 w-full lg:w-3/4">
                 <a href="https://mckayjalex.github.io/sort-a-meal/" target="_blank"
-                    class="text-sm lg:text-lg text-black bg-cover bg-[url('./assets/images/sort-a-meal-webpage.png')] p-4 rounded-xl shadow cursor-pointer shadow hover:opacity-50 bg-center h-36 lg:h-96 text-right flex justify-end items-end">
+                    class="text-sm lg:text-lg text-black lg:col-span-2 bg-cover bg-[url('./assets/images/sort-a-meal-webpage.png')] p-4 rounded-xl shadow cursor-pointer shadow hover:opacity-50 bg-center h-36 lg:h-96 text-right flex justify-end items-end">
                     <div>
                         <h2 class="font-bold">Sort A Meal</h2>
                         <p>Javascript / Tailwind / APIs</p>
                     </div>
                 </a>
                 <a href="https://mckayjalex.github.io/code-quiz/" target="_blank"
-                    class="text-sm lg:text-lg text-black lg:col-span-1 bg-cover bg-[url('./assets/images/code-quiz-webpage.png')] shadow p-4 h-36 lg:h-96 shadow cursor-pointer hover:opacity-50 rounded-xl bg-center text-right flex justify-end items-end">
+                    class="text-sm lg:text-lg text-black bg-cover bg-[url('./assets/images/code-quiz-webpage.png')] shadow p-4 h-36 lg:h-96 shadow cursor-pointer hover:opacity-50 rounded-xl bg-center text-right flex justify-end items-end">
                     <div>
                         <h2 class="font-bold">Code Quiz</h2>
                         <p>Javascript</p>
@@ -91,7 +91,7 @@
                     </div>
                 </a>
                 <a href="https://mckayjalex.github.io/Work-day-scheduler/" target="_blank"
-                    class="text-sm lg:text-lg text-black bg-[url('./assets/images/workday-webpage.png')] cursor-pointer shadow hover:opacity-50 p-4 shadow rounded-xl bg-cover bg-center h-36 lg:h-96 flex text-right justify-end items-end">
+                    class="text-sm lg:text-lg text-black lg:col-span-2 bg-[url('./assets/images/workday-webpage.png')] cursor-pointer shadow hover:opacity-50 p-4 shadow rounded-xl bg-cover bg-center h-36 lg:h-96 flex text-right justify-end items-end">
                     <div>
                         <h2 class="font-bold">Work Day Scheduler</h2>
                         <p>Javascript</p>
