--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
                     href="#work">Work</a>
                 <a class="bg-gradient-to-r hover:from-red-400 hover:to-pink-900 rounded text-lg py-2 px-4"
                     href="#contact">Contact</a>
-                <a class="bg-gradient-to-r hover:from-red-400 hover:to-pink-900 rounded text-lg py-2 px-4"
-                    href="./assets/files/AlexMcKay.pdf" target="_blank">Resume</a>
             </div>
         </div>
     </header>
@@ -86,7 +84,9 @@
                 coding. He is currently half way through his studies of Computer Science at the University of
                 Adeliade.<br><br>Alex currenly works in aviation but upon completion of his course wishes to find a Full
                 Stack Developer job. <br><br>Please feel free to reach out in the contact section.</p>
-            <a href="#contact" class="md:mt-24 p-2 border-2 border-red-400 rounded-lg hover:bg-red-200">Contact Me</a>
+            <a href="#contact" class="mr-4 md:mt-24 p-2 border-2 border-red-400 rounded-lg hover:bg-red-200">Contact Me</a>
+            <a class="md:mt-24 p-2 border-2 border-red-400 rounded-lg hover:bg-red-200"
+            href="./assets/files/AlexMcKay.pdf" target="_blank">Resume</a>
         </div>
     </section>
     <!-- WORK -->
